--- a/Planner/src/main/resources/application.properties
+++ b/Planner/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=PlannerProject
+
+spring.datasource.url=jdbc:mysql://localhost:3306/plannerd
+spring.datasource.username=root
+spring.datasource.password=ascv6790p@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
